--- a/style.css
+++ b/style.css
@@ -1,3 +1,19 @@
 *{
     font-family: "Roboto";
 }
+
+button {
+    background-color: black; /* Green */
+    border: none;
+    color: white;
+    padding: 15px 0;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    width: 50%;
+}
+
+button:hover{
+    background-color: grey;
+}
